docs(roadmap): add 1.0-GA platform baseline — JDK 25 LTS + preview-clean critical path (#211)
Records a 1.0-GA-blocking requirement surfaced from the JEP 401 (value classes →
JDK 28 *preview*) + StructuredTaskScope GA-timeline analysis: a distributable GA
artifact must not require --enable-preview of its consumers.

Verified scope (not assumed):
- SPI is already preview-clean for StructuredTaskScope — zero imports; every
  mention is javadoc {@code}. Consumers compiling against the SPI are not forced
  into preview by STS.
- Preview taint lives in shipped Core/Community bytecode: STS type usage is in
  exactly four default-path sites (SubsystemOrchestrator, InMemoryEventBus,
  OutboxOrchestrator, CommunityEventLoop). The planned KafkaEventLoop anticipates
  STS but is NOT yet implemented (zero STS in the kafka module today) — recorded
  separately as anticipated, build it on the GA layer from the start.
- VT (GA 21), ScopedValue (GA 25 LTS), FFM (GA 22) are all GA; STS is the only
  preview dependency. JEP 507 (primitive patterns) audited: zero usage in
  src/main — STS remains the sole known one.

Resolution captured: baseline JDK 25 LTS, default artifacts compiled without
--enable-preview; own fork/join/cancel layer over VT+ScopedValue behind a seam;
STS-native impls as an opt-in adapter artifact the default jars never reference
transitively; certify on 29 LTS from launch. Two airtight CI acceptance checks
(no preview type in exported SPI/codegen; default artifact has no preview
bytecode nor transitive STS-adapter ref) — applied to shipped bytecode only;
tests/TCK keep compiling under --enable-preview as today.

CLAUDE.md "prefer StructuredTaskScope" strong-default scoped to JVM-controlled
deployments + the opt-in adapter, so a default-path move away from STS is not
flagged as a guardrail violation. Also wired into the 1.0 release-requirements
list and the cross-cutting 1.0-critical summary. ADR reserved when design firms.

Co-authored-by: Claude Opus 4.8 (1M cont